@@ -29,7 +29,7 @@ room {
       blueprint.name = "the River Styx"
       blueprint.desc = "The dark river is quite calm, and rather peaceful in appearance.  Despite this tranquil facade, supernatural fear still penetrates into the core of your soul when you look at it.  {$self.C} is none other than the River Styx, one of the few ways spoken of in legends to forever destroy a soul."
       blueprint.keyword = "murky river"
-      blueprint.roomlist = false
+      blueprint.hidden = true
       blueprint.gettable = false
       blueprint.trashable = false
     }
